--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="MOVE-N - Profesionální stěhovací služby v Česku. Rychlé, spolehlivé a bezpečné stěhování pro domácnosti i firmy." />
-    <meta name="keywords" content="stěhování, stěhovací služby, MOVE-N, profesionální stěhování, přeprava nábytku" />
+    <meta
+      name="description"
+      content="MOVE-N - Profesionální stěhovací služby v Česku. Rychlé, spolehlivé a bezpečné stěhování pro domácnosti i firmy."
+    />
+    <meta
+      name="keywords"
+      content="stěhování, stěhovací služby, MOVE-N, profesionální stěhování, přeprava nábytku"
+    />
     <meta property="og:title" content="MOVE-N - Profesionální Stěhovací Služby" />
-    <meta property="og:description" content="Rychlé, spolehlivé a bezpečné stěhování pro domácnosti i firmy." />
+    <meta
+      property="og:description"
+      content="Rychlé, spolehlivé a bezpečné stěhování pro domácnosti i firmy."
+    />
     <meta property="og:type" content="website" />
     <title>MOVE-N Czech Moving Website</title>
-    <link rel="stylesheet" href="/assets/configurator.css" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script type="module" src="/assets/configurator.js"></script>
   </body>
 </html>
