--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="MOVE-N - Profesionální stěhovací služby v Česku. Rychlé, spolehlivé a bezpečné stěhování pro domácnosti i firmy."
+      content="MOVI-N - Profesionální stěhovací služby v Česku. Rychlé, spolehlivé a bezpečné stěhování pro domácnosti i firmy."
     />
     <meta
       name="keywords"
-      content="stěhování, stěhovací služby, MOVE-N, profesionální stěhování, přeprava nábytku"
+      content="stěhování, stěhovací služby, MOVI-N, profesionální stěhování, přeprava nábytku"
     />
-    <meta property="og:title" content="MOVE-N - Profesionální Stěhovací Služby" />
+    <meta property="og:title" content="MOVI-N - Profesionální Stěhovací Služby" />
     <meta
       property="og:description"
       content="Rychlé, spolehlivé a bezpečné stěhování pro domácnosti i firmy."
     />
     <meta property="og:type" content="website" />
-    <title>MOVE-N Czech Moving Website</title>
+    <title>MOVI-N Czech Moving Website</title>
   </head>
   <body>
     <div id="root"></div>
